# downgit

./: Cargo.toml  README.md  rustc-ice-2024-04-19T05_11_52-445723.txt
examples/: download.rs  download_single.rs  download_single_with_target.rs  download_with_target.rs  error_repo_not_exist.rs  error_target_not_exist.rs
src/: lib.rs
