[package]
name = "gitload"
version = "0.1.3"
edition = "2021"
description = "download any single file or dir from github"
license = "MIT"

[dependencies]
anyhow = "1.0.82"
reqwest = "0.12.3"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
